<resources>
    <string name="app_name">IRIS</string>
    <string name="config_bienvenida_Facebook">smsgps</string>

    <!-- xml activity login -->
    <string name="autenticarse_login">Autenticarse</string>
    <!-- xml activity registro -->
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="email_registro">Email</string>
    <string name="password_registro">Contraseña</string>
    <string name="repetir_password">Repetir Contraseña</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellidos_registro">Apellidos</string>
    <string name="registrar_registro">Registrar</string>
    <string name="idioma_seleccion">Lenguaje</string>

    <string name="item_spanish">Español</string>
    <string name="item_english">Ingles</string>

    <!-- xml activity menu -->
    <string name="action_connect_bluetooth">Conectar</string>
    <string name="action_profile">Pérfil</string>
    <string name="action_contact_mail">support@iris-smartsecurity.com</string>
    <string name="status_connected_bluetooth">Conectado</string>
    <string name="status_disconnected_bluetooth">Desconectado</string>
    <!-- xml activity listar dispositivos -->
    <string name="status_connect_bluetooth_whit">Conectado correctamente con\n%s</string>
    <string name="status_not_connect_bluetooth_whit">No se pudó conectar con\n%s</string>
    <!-- xml activity profile -->
    <string name="guardar_profile">Guardar</string>
    <string name="detalle_profile">Active | Male | Lima, Perú</string>
    <string name="username_profile">Username</string>

    <string name="gender_profile">Género</string>
    <string name="birhtday_profile">Cumpleaños</string>
    <string name="country_profile">País</string>

    <string name="action_activity_atras">Retroceder</string>
    <string name="item_male">Masculino</string>
    <string name="item_female">Femenino</string>

    <!-- xml activity funciones location -->
    <string name="funciones_location_click">1 click   : Compartir ubicación\n2 clicks : Seguimiento con gps\nSostener : Cancelar Alerta</string>
    <string name="contactos_numeros">Contactos(Números de teléfono)</string>
    <string name="agregar_cuenta_fb">Añadir su cuenta de Facebook</string>
    <string name="seguimiento_mapa">Mapa de seguimiento</string>
    <string name="historial_locaciones">Historial de Locaciones</string>
    <!-- xml activity contactos -->
    <string name="listado_contactos">Lista de Contactos</string>
    <string name="contacto01">Contacto 01</string>
    <string name="contacto02">Contacto 02</string>
    <string name="contacto03">Contacto 03</string>
    <string name="contacto04">Contacto 04</string>

    <!-- xml activity contacto -->
    <string name="email_contact">Email de tu contacto</string>
    <string name="phone_contact">Teléfono de tu contacto</string>

    <string name="action_comprobar">Comprobar email</string>
    <string name="action_delete">Borrar</string>

    <!-- xml activity facebook account -->
    <string name="account_facebook">Cuenta de Facebook</string>

    <!-- xml activity map track -->
    <string name="action_sincronizar_contactos">Sincronizar Contactos</string>



    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">753875887989272</string>
    <string name="exception">Exception: %1$s</string>
    <string name="textEditar">Editar</string>
    <!--FUNCIONES DEL BOTON-->
    <string name="infoDevice">1 click   : Hacerlo sonar\n2 clicks : Prender la linterna\n3 clicks : Vibrar</string>
    <string name="infoFoto">1 click   : Tomar foto.\n2 clicks : Grabar video.\n3 clicks : Detener video</string>
    <string name="infoMedia">1 click   : Play/Pause\n2 clicks : next.\n3 clicks : forward.</string>
    <string name="infoConfigure">1 click   : Configure\n2 clicks : Configure\n3 clicks : Configure</string>
    <string name="textoListaConfiguracion">Listado de Configuraciòn</string>


    <string-array name="CountryCod" >
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>

</resources>
