<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste_oscuro_01">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/img_texto_iris_02"
        android:layout_above="@+id/etEmail"
        android:layout_marginBottom="20dp"  />

    <EditText
        style="@style/StyleEdittextCuentaRegistro"
        android:id="@+id/etEmail"
        android:layout_above="@+id/etPassword"
        android:inputType="textEmailAddress"
        android:text=""
        android:hint="@string/email_registro"/>

    <EditText
        style="@style/StyleEdittextCuentaRegistro"
        android:id="@+id/etPassword"
        android:layout_above="@+id/vSeparadorCentral"
        android:inputType="textPassword"
        android:hint="@string/password_registro"/>

    <!--SEPARADOR-->
    <View
        android:id="@+id/vSeparadorCentral"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>


    <TextView
        android:layout_margin="20dp"
        android:padding="10dp"
        style="@style/StyleTextoSplash"
        android:textSize="16sp"
        android:id="@+id/tvIniciarSesion"
        android:layout_below="@+id/vSeparadorCentral"
        android:textColor="@color/text_color"
        android:text="@string/autenticarse_login"
        />
    <com.facebook.widget.LoginButton
        android:id="@+id/lbIniciarSesionFacebook"
        android:layout_below="@id/tvIniciarSesion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        facebook:confirm_logout="false"
        facebook:fetch_user_info="true"
        />
    <TextView
        android:layout_margin="20dp"
        style="@style/StyleTextoSplash"
        android:id="@+id/tvRegistrarse"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_below="@id/lbIniciarSesionFacebook"
        android:text="@string/crear_cuenta"/>



</RelativeLayout>